Fix padding bug on tablets

--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ body {
 }
 @media only screen and (max-width: 64em) {
   body {
-    padding: 0 4.8rem;
+    padding: 3.2rem 4.8rem;
   }
 }
 @media only screen and (max-width: 52em) {
